Added new errors Update now returns affected rows Documentation for bus categories
